--- a/src/app/modules/news/components/article-card/article-card.component.html
+++ b/src/app/modules/news/components/article-card/article-card.component.html
@@ -1,17 +1,33 @@
 <div class="container-article">
     <mat-card class="example-card">
-        <div class="content-info">
-            <mat-card-title-group>
-                <mat-card-title class="text-title">Building Awareness: Creating a BodyTalk Matrix in Central Visayas and Mindanao,
-                    Philippines</mat-card-title>
-            </mat-card-title-group>
-            <mat-card-content>
-                Increased awareness, in all its forms, can have a truly remarkable effect in healing and growth. This is
-                true for the...
-            </mat-card-content>
+        <div class="content-all-info">
+            <div class="content-info">
+                <mat-card-title-group>
+                    <mat-card-title class="text-title">Building Awareness: Creating a BodyTalk Matrix in Central Visayas
+                        and Mindanao,
+                        Philippines</mat-card-title>
+                </mat-card-title-group>
+                <mat-card-content>
+                    Increased awareness, in all its forms, can have a truly remarkable effect in healing and growth.
+                    This is
+                    true for the...
+                </mat-card-content>
+            </div>
+            <div class="footerCard">
+                <div class="date">
+                   <p>September 23, 2021</p> 
+                </div>
+                <div class="origin">
+                    <div class="avatar">
+                        <img src="../../../../../assets/img/logos/bodytalk-logo@2x.png" alt="">
+                    </div>
+                    <div class="username">
+                        [name_user]
+                    </div>
+                </div>
+            </div>
         </div>
 
         <img class="image" src="../../../../../assets/img/logos/bodytalk-logo@2x.png" alt="">
     </mat-card>
-
 </div>
