--- a/src/app/modules/news/components/search/search.component.html
+++ b/src/app/modules/news/components/search/search.component.html
@@ -1,13 +1,13 @@
 <div class="content-search">
     <div class="search">
-        <mat-form-field mat-dialog-title appearance="outline">
+        <mat-form-field mat-dialog-title appearance="outline" class="mat-search">
             <input matInput type="text" placeholder="Search Anything" autocomplete="off" />
             <mat-icon matPrefix>search</mat-icon>
         </mat-form-field>
     </div>
 
     <div class="filters">
-        <mat-form-field mat-dialog-title appearance="outline">
+        <mat-form-field mat-dialog-title appearance="outline" class="mat-select">
             <mat-label>Select</mat-label>
             <mat-select>
                 <mat-option value="one">First option</mat-option>
@@ -15,9 +15,9 @@
             </mat-select>
         </mat-form-field>
 
-        <mat-form-field mat-dialog-title appearance="outline">
+        <mat-form-field  class="mat-select" mat-dialog-title appearance="outline" >
             <mat-label>Select</mat-label>
-            <mat-select>
+            <mat-select class="mat-select">
                 <mat-option value="one">First option</mat-option>
                 <mat-option value="two">Second option</mat-option>
             </mat-select>
