--- a/src/app/modules/news/pages/news-page/news-page.component.html
+++ b/src/app/modules/news/pages/news-page/news-page.component.html
@@ -1,8 +1,15 @@
 <div class="content-news">
     <div class="content-news">
         <h2>Latest News</h2>
-        <search-coda></search-coda>
-        <article-card></article-card>
+        <div class="content-search">
+            <search-coda></search-coda>
+        </div>
+        <div class="content-articles">
+            <list-article></list-article>     
+            <div class="box-susbcribe">
+                <p>Subscribe Newsletter</p>
+            </div>
+        </div>
+
     </div>
-    
 </div>
