--- a/src/app/modules/testimonials/components/carousel/carousel.component.scss
+++ b/src/app/modules/testimonials/components/carousel/carousel.component.scss
@@ -1,13 +1,84 @@
-.content-cards {
-    width: 100%;
+.container {
     display: flex;
-    align-items: center;
-    justify-content: center;
     position: relative;
-    margin-bottom: 100px;
+    justify-content: center;
+    height: 400px;
+    margin-bottom: 60px;
+    .w-100 {
+        width: 100% !important;
+      
+    }
+
+    .button {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #d8f2f5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #04d9d9;
+    }
+
+    .left,
+    .right {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 1;
+    }
+
+    .left.disabled,
+    .right.disabled {
+        background-color: #ccc;
+    }
+
+    .left {
+        left: 10px;
+
+        .icon {
+            width: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            font-size: 15px;
+        }
+    }
+
+    .right {
+        right: 10px;
+        .icon {
+            width: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 15px;
+        }
+    }
+    .cards {
+        width: calc(100%);
+        overflow: hidden;
+        .overflow {
+            position: relative;
+            transition: left 0.3s ease-in-out;
+            .card {
+                height: 300px;
+                display: inline-block;
+                position: relative;
+                .content-card{
+                    width: 100%;
+                    height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+    }
+
     .background-cards {
         position: absolute;
-        bottom: -50px;
+        bottom: -10px;
         width: 1000px;
         height: 80%;
         background-color: #f9efe4;
@@ -16,21 +87,27 @@
 
     .points {
         position: absolute;
-        bottom: -30px;
+        bottom: 30px;
         z-index: 10;
-        height: 20px;
         display: flex;
         align-items: center;
     }
-    .buttons {
-        position: absolute;
-        height: 100%;
-        width: 100%;
-        top: 0;
+}
+
+
+
+
+@media only screen and (max-width: 800px) {
+
+    .container {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 11;
+        position: relative;
+        justify-content: center;
+        height: 400px;
+        .w-100 {
+            width: 100% !important;
+          
+        }
         .button {
             width: 40px;
             height: 40px;
@@ -41,18 +118,24 @@
             justify-content: center;
             color: #04d9d9;
         }
-
-        .rigth {
-            .icon {
-                width: 10px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 15px;
-            }
+    
+        .left,
+        .right {
+            position: absolute;
+           top: initial;
+           bottom: 0;
+            transform: translateY(-50%);
+            z-index: 1;
         }
-
+    
+        .left.disabled,
+        .right.disabled {
+            background-color: #ccc;
+        }
+    
         .left {
+            left: 10px;
+            bottom: 0;
             .icon {
                 width: 10px;
                 display: flex;
@@ -61,28 +144,38 @@
                 font-size: 15px;
             }
         }
-    }
-
-    .items {
-        width: 100%;
-        height: 80%;
-        padding-left: 20px;
-        padding-right: 20px;
-        overflow: hidden;
-        .content-testimonials-cards {
-            width: 100%;
-            display: flex;
-            align-items: flex-start;
-        }
-    }
-}
-
-@media only screen and (max-width: 800px) {
-    .content-cards {
-        width: 100vw;
-
-        .buttons {
+    
+        .right {
             bottom: 0;
+            right: 10px;
+            .icon {
+                width: 10px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 15px;
+            }
+        }
+        .cards {
+            width: calc(100%);
+            overflow: hidden;
+            .overflow {
+                position: relative;
+                transition: left 0.3s ease-in-out;
+                .card {
+                    height: 300px;
+                    display: inline-block;
+                    position: relative;
+                    .content-card{
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
         }
     }
+    
 }
