--- a/src/app/modules/testimonials/menus/example-menu/example-menu.component.scss
+++ b/src/app/modules/testimonials/menus/example-menu/example-menu.component.scss
@@ -1,8 +1,11 @@
 .content-carousel{
-    max-width: 1200px;
+    width: 100%;
 }
 @media only screen and (max-width: 1200px){
     .content-carousel{
         width: 100vw;
+        box-sizing: border-box;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
